Kubernetes/Infrastructure/Istio/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: kiali
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-ca-issuer
    cert-manager.io/common-name: kiali.homelab.kbushby.com
    external-dns.alpha.kubernetes.io/hostname: kiali.homelab.kbushby.com
spec:
  ingressClassName: nginx
  rules:
    - host: kiali.homelab.kbushby.com
      http:
        paths:
          - backend:
              service:
                name: kiali
                port: 
                  number: 20001
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - kiali.homelab.kbushby.com
      secretName: kiali-tls
